--- a/nav.css
+++ b/nav.css
@@ -2,12 +2,16 @@
   /*Removes Bullet Points from List Objects from navBar*/
   list-style: none;
   background-color: #292D38;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  text-align: center;
 }
 
 /*Attributes for the Line Objects*/
 li{
   display: inline-block;  /*Makes the list horizontal*/
-  margin-left: 70px;      /*Defines the space between*/
+  margin-left: 70px;      /*Defines the space between - 70px*/
+
 }
 
 nav a{
