--- a/nav.css
+++ b/nav.css
@@ -32,8 +32,11 @@ li{
 nav a{
   text-decoration: none;
   font-size: 20px;
+  font-family: 'Consolas';
+  /* font-family: 'Karla'; */
+  /* font-family: 'Source Code Pro', monospace; */
   color: white;
-  font-family: 'Karla';
+ 
   padding: 0px 20px 0px 0px;
 }
 
